button margin fixed on mobile screen size

--- a/style.css
+++ b/style.css
@@ -118,6 +118,9 @@ footer a:hover {
 }
 
 @media only screen and (max-width: 900px) {
+  a.button {
+    margin-bottom: 20px;
+  }
   #ghibli-group,
   #intro {
     margin: 30px 30px 0 30px;
